...
                    android:paddingTop="6dp"
                    android:text="Enter / Edit Current Job Details"
                    android:textColor="@color/GT_GOLD"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/offersButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/GT_NAVY"
                    android:insetTop="20sp"
                    android:insetBottom="20sp"
                    android:onClick="onClick"
...
