...
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" />

        <Button
            android:id="@+id/curSaveCurrentJobId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#003057"
            android:text="Save Current Job"
            android:textColor="#B3A369" />

...
